--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Francois Laberge <francoislaberge@gmailc.om",
-  "license": "MIT"
+  "license": "MIT",
+  "private": false,
+  "publishConfig": {
+      "registry": "https://registry.npmjs.org"
+  }
 }
