--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invertible",
   "version": "0.1.1",
-  "description": "Create invertible functions, compose them, and then create invertible (time reversible software)",
+  "description": "Create invertible code, compose it, and create invertible applications",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
