--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "private": false,
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/francoislaberge/invertible"
+  },
+  "bugs": {
+    "url": "https://github.com/francoislaberge/invertible/issues"
   }
 }
